# project-manager

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  create_test_new_bash.rs  install-portable.sh  install.ps1  install.sh  prd.md  test-new-structure.rs  test_extension_priority.sh  test_simple.rs
a/: README.md  extension.yml
actions/: README.md
docs/: ARCHITECTURE.md  CLI_USAGE.md  CLI_USAGE_SCENARIOS.md  COMMANDS.md  COMMIT_GUIDELINES.md  CONFIG_PATHS.md  DIRENV_AND_HOOKS.md  EXTENSION_DEVELOPMENT_GUIDE.md  EXTENSION_MIGRATION_PRD.md  MIGRATION_GUIDE.md  PRD_PM_InitialUserExperience_Phase5.md  STARSHIP_INTEGRATION.md  STARSHIP_SETUP_GUIDE.md  TAG_INTERFACE_IMPLEMENTATION_PLAN.md  TAG_INTERFACE_SPEC.md  TAG_SELECTION_GUIDE.md
hooks/: README.md  commit-msg  pre-commit  pre-push
npm/: package-lock.json  package.json  tsconfig.json
patches/: 0001-docs-Update-documentation-for-new-flat-command-struc.patch  0001-feat-Enhance-add-command-with-patterns-and-interacti.patch  0001-feat-Implement-flat-command-structure-with-intuitive.patch  0001-feat-Remove-default-workspace-concept-for-flexible-p.patch
quick-test-bash/: README.md  extension.yml
sample-python-deploy/: extension.yml
sample-rust-monitor/: Cargo.toml  extension.yml
sample-rust-monitor/.github/workflows/: release.yml
sample-rust-monitor/src/: main.rs
schemas/: config.schema.json
script/: install-portable.sh  install.sh
src/: backup.rs  config.rs  constants.rs  display.rs  error.rs  lib.rs  main.rs  shell_integration.rs  tag_commands.rs  utils.rs  validation.rs
test-bash/: extension.yml
test-extension-local/: extension.yml
test-extensions/: README.md  create_sample_bash_extension.rs  create_sample_python_extension.rs  create_sample_rust_extension.rs  demo_bash_extension_test.sh  demo_python_extension_test.sh  demo_rust_extension_test.sh  test-bash-extension.sh  test-python-extension.sh  (+2 more)
(+94 files in other folders)
