[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1.0.82"
dirs = "5.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
inquire = "0.6.2"
shellexpand = "1.1.0"
