[package]
name = "pm"
version = "0.1.0"
edition = "2021"
description = "A fast, terminal-based project management CLI tool"
license = "MIT"
repository = "https://github.com/zdpk/project-manager"
homepage = "https://github.com/zdpk/project-manager"
keywords = ["cli", "project", "management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonschema = "0.17"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
colored = "2.1"
md5 = "0.7"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
anyhow = "1.0.82"
dirs = "5.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
inquire = "0.6.2"
shellexpand = "1.1.0"
git2 = "0.18"
octocrab = "0.38"
walkdir = "2.4"
indicatif = "0.17"
