[package]
name = "pm-ext-sample-rust-monitor"
version = "0.1.0"
edition = "2021"
description = "System monitoring tool built in Rust for PM demonstration"
authors = ["PM Team"]
license = "MIT"
repository = "https://github.com/PM Team/pm-ext-sample-rust-monitor"

[[bin]]
name = "pm-ext-sample-rust-monitor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
